--- a/Linux-RADXA-CM5-DTB-6.1.43/PKGBUILD
+++ b/Linux-RADXA-CM5-DTB-6.1.43/PKGBUILD
@@ -1,195 +1,35 @@
-# / AArch64 multi-platform
-# Maintainer: Kevin Mihelich <kevin@archlinuxarm.org>
-# Maintainer: graysky <therealgraysky AT proton DOT me>
-
-buildarch=8
-
-#pkgbase=linux-aarch64
-_srcname=radxa-cm5-uconsole
-#_kernelname=${pkgbase#linux}
-_commit=c2204834e1d7d0acfd64e1b7874d432bc142f1a4
-_desc="Device tree overlays for radxa cm5 uconsole"
+# Maintainer: dev-null2019
+pkgname=radxa-cm5-uconsole-dtb
 pkgver=6.1.43
 pkgrel=1
+pkgdesc="Device tree overlays for radxa cm5 uconsole"
 arch=('aarch64')
-url="http://www.github.com/dev-null2019/radxa-cm5-uconsole/"
+url="https://github.com/dev-null2019/radxa-cm5-uconsole"
 license=('GPL-2.0-only')
-makedepends=( 'dtc' )
-options=('!strip')
-source=("git://github.com/dev-null2019/radxa-cm5-uconsole.git#commit=$_commit")
-
-prepare() {
-  cd ${_srcname}
-  echo "Setting version..."
-  echo "-$pkgrel" > localversion.10-pkgrel
-}
+makedepends=('dtc')
+source=("https://github.com/dev-null2019/radxa-cm5-uconsole/archive/main.tar.gz")
+md5sums=('6be835567ca3d7e4bfd81c1cadd46035')
 
 build() {
-  cd ${_srcname}/devicetree_overlays
-  dtc -I dts -O dtb -o /lib/firmware/axp20x.dtbo -b 0 -@ axp20x.dts
-  dtc -I dts -O dtb -o /lib/firmware/cwu50_panel.dtbo -b 0 -@ cwu50_panel.dts
-  dtc -I dts -O dtb -o /lib/firmware/displaystuff.dtbo -b 0 -@ displaystuff.dts
-}
+  cd "radxa-cm5-uconsole-main/devicetree_overlays"
+  
+  # Use cpp to handle includes for DTS files
+  INCLUDE_PATH="/usr/src/linux-6.1.43/include"
+  if [ ! -d "$INCLUDE_PATH" ]; then
+    # Fallback to current kernel headers if not found at specific path
+    INCLUDE_PATH="/usr/lib/modules/$(uname -r)/build/include"
+  fi
 
-_package() {
-  pkgdesc="The Linux Kernel and modules - ${_desc}"
-  depends=('coreutils' 'kmod' 'mkinitcpio>=0.7')
-
-  provides=("radxa-cm5-uconsole-dt")
-  install=${pkgname}.install
-
-  cd $_srcname
-  local kernver="$(<version)"
-  local modulesdir="$pkgdir/usr/lib/modules/$kernver"
-
-  echo "Installing boot image and dtbs..."
-  install -Dm644 arch/arm64/boot/Image{,.gz} -t "${pkgdir}/boot"
-  make INSTALL_DTBS_PATH="${pkgdir}/boot/dtbs" dtbs_install
-
-  echo "Installing modules..."
-  make INSTALL_MOD_PATH="$pkgdir/usr" INSTALL_MOD_STRIP=1 DEPMOD=/doesnt/exist modules_install
-
-  # remove build link
-  rm "$modulesdir"/build
-
-  # sed expression for following substitutions
-  local _subst="
-    s|%PKGBASE%|${pkgbase}|g
-    s|%KERNVER%|${kernver}|g
-  "
-
-  # install mkinitcpio preset file
-  sed "${_subst}" ../linux.preset |
-    install -Dm644 /dev/stdin "${pkgdir}/etc/mkinitcpio.d/${pkgbase}.preset"
-
-  # rather than use another hook (90-linux.hook) rely on mkinitcpio's 90-mkinitcpio-install.hook
-  # which avoids a double run of mkinitcpio that can occur
-  install -d "${pkgdir}/usr/lib/initcpio/"
-  echo "dummy file to trigger mkinitcpio to run" > "${pkgdir}/usr/lib/initcpio/$(<version)"
-}
-
-_package-headers() {
-  pkgdesc="Header files and scripts for building modules for linux kernel - ${_desc}"
-  provides=("linux-headers=${pkgver}")
-  conflicts=('linux-headers')
-
-  cd $_srcname
-  local builddir="$pkgdir/usr/lib/modules/$(<version)/build"
-
-  echo "Installing build files..."
-  install -Dt "$builddir" -m644 .config Makefile Module.symvers System.map \
-    localversion.* version vmlinux
-  install -Dt "$builddir/kernel" -m644 kernel/Makefile
-  install -Dt "$builddir/arch/arm64" -m644 arch/arm64/Makefile
-  cp -t "$builddir" -a scripts
-
-  # add xfs and shmem for aufs building
-  mkdir -p "$builddir"/{fs/xfs,mm}
-
-  echo "Installing headers..."
-  cp -t "$builddir" -a include
-  cp -t "$builddir/arch/arm64" -a arch/arm64/include
-  install -Dt "$builddir/arch/arm64/kernel" -m644 arch/arm64/kernel/asm-offsets.s
-  mkdir -p "$builddir/arch/arm"
-  cp -t "$builddir/arch/arm" -a arch/arm/include
-
-  install -Dt "$builddir/drivers/md" -m644 drivers/md/*.h
-  install -Dt "$builddir/net/mac80211" -m644 net/mac80211/*.h
-
-  # https://bugs.archlinux.org/task/13146
-  install -Dt "$builddir/drivers/media/i2c" -m644 drivers/media/i2c/msp3400-driver.h
-
-  # https://bugs.archlinux.org/task/20402
-  install -Dt "$builddir/drivers/media/usb/dvb-usb" -m644 drivers/media/usb/dvb-usb/*.h
-  install -Dt "$builddir/drivers/media/dvb-frontends" -m644 drivers/media/dvb-frontends/*.h
-  install -Dt "$builddir/drivers/media/tuners" -m644 drivers/media/tuners/*.h
-
-  # https://bugs.archlinux.org/task/71392
-  install -Dt "$builddir/drivers/iio/common/hid-sensors" -m644 drivers/iio/common/hid-sensors/*.h
-
-  echo "Installing KConfig files..."
-  find . -name 'Kconfig*' -exec install -Dm644 {} "$builddir/{}" \;
-
-  echo "Removing unneeded architectures..."
-  local arch
-  for arch in "$builddir"/arch/*/; do
-    [[ $arch = */arm64/ || $arch == */arm/ ]] && continue
-    echo "Removing $(basename "$arch")"
-    rm -r "$arch"
+  for dts in *.dts; do
+    dtbo="${dts%.dts}.dtbo"
+    echo "Compiling $dts..."
+    cpp -nostdinc -I "$INCLUDE_PATH" -I "$INCLUDE_PATH/dt-bindings" -undef -x assembler-with-cpp "$dts" | \
+    dtc -I dts -O dtb -o "$dtbo" -b 0 -@ -
   done
-
-  echo "Removing documentation..."
-  rm -r "$builddir/Documentation"
-
-  echo "Removing broken symlinks..."
-  find -L "$builddir" -type l -printf 'Removing %P\n' -delete
-
-  echo "Removing loose objects..."
-  find "$builddir" -type f -name '*.o' -printf 'Removing %P\n' -delete
-
-  echo "Stripping build tools..."
-  local file
-  while read -rd '' file; do
-    case "$(file -bi "$file")" in
-      application/x-sharedlib\;*)      # Libraries (.so)
-        strip -v $STRIP_SHARED "$file" ;;
-      application/x-archive\;*)        # Libraries (.a)
-        strip -v $STRIP_STATIC "$file" ;;
-      application/x-executable\;*)     # Binaries
-        strip -v $STRIP_BINARIES "$file" ;;
-      application/x-pie-executable\;*) # Relocatable binaries
-        strip -v $STRIP_SHARED "$file" ;;
-    esac
-  done < <(find "$builddir" -type f -perm -u+x ! -name vmlinux -print0)
-
-  echo "Adding symlink..."
-  mkdir -p "$pkgdir/usr/src"
-  ln -sr "$builddir" "$pkgdir/usr/src/$pkgbase"
 }
 
-_package-chromebook() {
-  pkgdesc="The Linux Kernel - ${_desc} - Chromebooks"
-  depends=('linux-aarch64')
-  conflicts=('linux-aarch64-rc-chromebook')
-  install=${pkgname}.install
-
-  cd ${_srcname}
-
-  mkdir -p "${pkgdir}/boot"
-
-  image=arch/arm64/boot/Image
-
-  chromeos_boards=(
-    'elm'
-    'gru'
-    'kukui'
-    'trogdor'
-    'asurada'
-  )
-  chromebook_dtbs=($(for b in ${chromeos_boards[@]}; do find arch/arm64/boot -name "*${b}*.dtb" | LC_COLLATE=C sort; done))
-
-  lz4 -20 -z -f -m ${image}
-  echo ${chromebook_dtbs[@]} | ../generate_chromebook_its.sh ${image}.lz4 arm64 lz4 > kernel.its
-
-  mkimage -D "-I dts -O dtb -p 2048" -f kernel.its vmlinux.uimg
-  dd if=/dev/zero of=bootloader.bin bs=512 count=1
-  echo "console=tty0 console=ttyS2,115200n8 earlyprintk=ttyS2,115200n8 console=ttyMSM0,115200n8 init=/sbin/init root=PARTUUID=%U/PARTNROFF=1 rootwait rw noinitrd" > cmdline
-  vbutil_kernel \
-    --pack vmlinux.kpart \
-    --version 1 \
-    --vmlinuz vmlinux.uimg \
-    --arch aarch64 \
-    --keyblock ../kernel.keyblock \
-    --signprivate ../kernel_data_key.vbprivk \
-    --config cmdline \
-    --bootloader bootloader.bin
-
-  cp vmlinux.kpart "${pkgdir}/boot"
+package() {
+  cd "radxa-cm5-uconsole-main/devicetree_overlays"
+  install -d "${pkgdir}/boot/dtbs/rockchip/overlays"
+  install -m644 *.dtbo "${pkgdir}/boot/dtbs/rockchip/overlays/"
 }
-
-pkgname=("${pkgbase}" "${pkgbase}-headers" "${pkgbase}-chromebook")
-for _p in ${pkgname[@]}; do
-  eval "package_${_p}() {
-    _package${_p#${pkgbase}}
-  }"
-done
